tests/functional/cases/pass/test_file_include_from_links.coil
test: {
  myfile: 'general.coil'
  @file: myfile
}

expected: {
  myfile: 'general.coil'
  @file: 'general.coil'
}
