tests/functional/cases/fail/test_file_noexist.coil
@file 'random_file_which_should_not_exist.coil'
